// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[app] App root mounts application correctly on the client 1`] = `
<article
  class="Page"
>
  <header
    class="Banner"
    role="banner"
  >
    <a
      class="Brand"
      href="/"
    >
      <span>
        My name is Viii: a painter of frequencies and thoughts
      </span>
      <svg />
      <svg />
    </a>
    <nav
      class="Navigation"
      role="navigation"
    >
      <button>
        <span>
          Menu
        </span>
      </button>
      <ul>
        <li>
          <a
            href="/news"
          >
            <span>
              News
            </span>
          </a>
        </li>
        <li>
          <a
            href="/releases"
          >
            <span>
              Releases
            </span>
          </a>
        </li>
        <li>
          <a
            href="/appearances"
          >
            <span>
              Appearances
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <main
    class="Page-body"
    role="main"
  >
    <div
      class="PageComponent"
    />
  </main>
  <div
    class="Portal"
  />
</article>
`;

exports[`[app] App root mounts application correctly on the server 1`] = `
<article
  class="Page"
>
  <header
    class="Banner"
    role="banner"
  >
    <a
      class="Brand"
      href="/"
    >
      <span>
        My name is Viii: a painter of frequencies and thoughts
      </span>
      <svg />
      <svg />
    </a>
    <nav
      class="Navigation"
      role="navigation"
    >
      <button>
        <span>
          Menu
        </span>
      </button>
      <ul>
        <li>
          <a
            href="/news"
          >
            <span>
              News
            </span>
          </a>
        </li>
        <li>
          <a
            href="/releases"
          >
            <span>
              Releases
            </span>
          </a>
        </li>
        <li>
          <a
            href="/appearances"
          >
            <span>
              Appearances
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <main
    class="Page-body"
    role="main"
  >
    <div
      class="PageComponent"
    />
  </main>
  <div
    class="Portal"
  />
</article>
`;

exports[`[app] App root unsubscribes from Redux store and adds \`statusCode\` to the response from the store 1`] = `
<article
  class="Page"
>
  <header
    class="Banner"
    role="banner"
  >
    <a
      class="Brand"
      href="/"
    >
      <span>
        My name is Viii: a painter of frequencies and thoughts
      </span>
      <svg />
      <svg />
    </a>
    <nav
      class="Navigation"
      role="navigation"
    >
      <button>
        <span>
          Menu
        </span>
      </button>
      <ul>
        <li>
          <a
            href="/news"
          >
            <span>
              News
            </span>
          </a>
        </li>
        <li>
          <a
            href="/releases"
          >
            <span>
              Releases
            </span>
          </a>
        </li>
        <li>
          <a
            href="/appearances"
          >
            <span>
              Appearances
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <main
    class="Page-body"
    role="main"
  >
    <div
      class="PageComponent hasError"
    />
  </main>
  <div
    class="Portal"
  />
</article>
`;
